# sentinal-fraud-detection

./: .coveragerc  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  PYTHON_SETUP.md  README.md  SECURITY_HARDENING.md  TESTING.md  TESTING_SUMMARY.md  docker-compose.elk.yml  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-build.yml
docs/: API_EXAMPLES.md  PHASE3_SUMMARY.md  analysis.md  hardening.md  index.md  ml_guide.md  walkthrough.md
docs/architecture/: README.md
docs/runbooks/: deployment.md
elk/: elasticsearch.yml  kibana.yml  logstash.conf
monitoring/: alert_rules.yml  alertmanager.yml  grafana_dashboard.json  prometheus.yml
monitoring/dashboards/: dashboards.yml
monitoring/datasources/: datasources.yml
nginx/: Dockerfile  nginx.conf
python/: .env.example  Dockerfile  README.md  SECURITY_SETUP.md  agent_explainer.py  api.py  audit_logger.py  audit_reports.py  auth.py  auth_models.py  automated_setup.ps1  cache_manager.py  data_gen.py  data_gen_enhanced.py  explainability.py  generate_token.py  gnn_train.py  gnn_train_improved.py  logging_config.py  models.py  requirements-dev.txt  requirements.txt  tracing.py
python/config/: best_hyperparams.json
python/data/: graph.pkl  graph_pyg.pt
python/models/: best_fraud_detector.pt
python/reports/: fraud_scores.json
python/tests/: conftest.py  test_agent_explainer.py  test_api.py  test_auth.py  test_data_gen.py  test_gnn_train.py  test_logging.py  test_models.py
redis/: sentinel.conf
scripts/: export_model.py
src/: App.tsx  index.css
src/components/: Architecture.tsx  GraphDemo.tsx  GraphVisualization.tsx  Hero.tsx  Login.tsx  Modules.tsx  ProtectedRoute.tsx  TechStack.tsx  UserMenu.tsx
src/contexts/: AuthContext.tsx
src/pages/: Index.tsx
tests/: test_api.py  test_audit.py  test_cache.py  test_model.py
torchserve/: Dockerfile  config.properties  handler.py
(+6 files in other folders)
